name:                haskell61850
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell61850#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Iec61850.Client Iec61850.Enums.FC Iec61850.Enums.AcsiClass Iec61850.BitString Iec61850.Mms Iec61850.Enums.MmsType 
  other-modules:       Iec61850.LinkedList Iec61850.MmsInternal Iec61850.EnumsInternal
  build-depends:       base >= 4.7 && < 5
                     , array
                     , bytestring
  extra-libraries:     iec61850 pthread
  default-language:    Haskell2010

executable demo1
  hs-source-dirs:      demo1
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell61850
  default-language:    Haskell2010

test-suite haskell61850-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell61850
                     , HUnit
                     , split
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell61850
